# bdapt

./: Dockerfile.test  IMPL.md  Makefile  README.md  pyproject.toml  run_tests.sh
.cursor/rules/: inside-docker.mdc
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
bdapt/: apt_operations.py  bundle.py  bundle_manager.py  cli.py  exceptions.py  metapackage.py  rootlock.py  storage.py  validators.py
tests/: __init__.py  conftest.py  test_bundle.py  test_models.py  test_storage.py
